fix: broken favicon path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap" rel="stylesheet" />
     <title>Daggerfall Roleplay Generator</title>
-    <link rel="icon" type="image/x-icon" href="/resources/DAGGER.ICO" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
